# geo-market-watch

./: .gitignore  CHANGELOG.md  CI_HARDENING_SUMMARY.md  CONTRIBUTING.md  ENGINE_ERADICATION_SUMMARY.md  FINAL_CHECK.md  FINAL_VALIDATION.md  LICENSE.md  LOCKIN_FOLLOWUP_SUMMARY.md  POST_CLOSURE_CLEANUP_SUMMARY.md  README.md  README_V1.5.md  REFACTOR_SUMMARY.md  RELEASE-v6.x-SUMMARY.md  RELEASED-v6.4.md  RELEASE_SUMMARY_v6.4.md  SKILL.md  VALIDATION-v6.3.md  VALIDATION-v6.4-FINAL.md  logic_gate.py  pyproject.toml  requirements.txt  run_regression_tests.py
agents/: critic_validator.py  market_mapper.py  merge.py  minimal-agent-config.example.json  openai.yaml  political_analyst.py  scout-prompt.txt  state.py  state_update.py  tracing.py  views.py
benchmarks/: README.md
data/: README.md  benchmark-events.json  db-seed-events.json  dedupe-memory.json  dedupe-memory.sample.json  event-cards-2026-03-15.json  geo_alpha.db  idea-performance-sample.json  intake-sample.json  trade-ideas-2026-03-15.json  watchlist-2026-03-15.json
docs/: Automation_Guide.md  MIGRATION_MAP.md  README.md  README_V1.5.md  V7_DATA_CONTRACTS.md  V7_DESIGN_PREWORK.md  WRAPPER_RETIREMENT_PLAN.md  analyst-review-guidelines.md  analyst-workflow.md  architecture.md  benchmark-v5.4.md  benchmark-v6.3.md  benchmark-v6.4.md  benchmark-v6.md  database-query-examples.md  design-notes.md  event-card-2026-03-15-001.md  event-card-2026-03-15-002.md  event-card-2026-03-15-003.md  event-card-schema.md  event-database-design.md  full-analysis-trigger.md  geo-alpha-database-spec.md  idea-lifecycle-spec.md  idea-outcome-classification.md  methodology.md  minimal-agent-architecture.md  notification-spec.md  performance-methodology.md  performance-tracking.md  roadmap-v6.md  scheduled-monitoring.md  scoring-engine-spec.md  scout-mode-example.md  scout-scan-2026-03-15.md  signal-scoring.md  source-tiering.md  validation-checklist.md
engine/: README.md  agent_loop.py  artifact_ingest.py  database.py  database_models.py  dedupe_memory.py  export_layer.py  exposure_engine.py  idea_review_engine.py  intake_normalizer.py  lifecycle_engine.py  notifier.py  scoring_engine.py  status_rules.py  trigger_engine.py
examples/: analyst-review.example.json  database-query-output.example.md  example-inputs.md  example-output.md  idea-lifecycle.example.md  idea-performance-output.example.md  idea-performance.example.json  intake-input.example.json  minimal_event.json  notify-full-analysis.example.md  notify-monitor.example.md
exports/: closed_ideas_20260315_183216.json  idea_performance_20260315_183216.csv  idea_performance_latest.csv  idea_performance_latest.json  idea_performance_summary.json
geo_market_watch/: README.md  __init__.py  agent_loop.py  agent_pipeline.py  artifact_ingest.py  dashboard_views.py  database.py  database_models.py  dedupe_memory.py  event_similarity.py  export_layer.py  exposure_engine.py  idea_review_engine.py  intake_normalizer.py  lifecycle_engine.py  models.py  notifier.py  performance_engine.py  scoring_engine.py  status_rules.py  trigger_engine.py
outputs/: full_analysis_093fa8450fab.md  full_analysis_299303745565.md  full_analysis_310290c28f97.md  full_analysis_3d0a3f401f47.md  full_analysis_5f91c016c755.md  full_analysis_a02550cd8955.md  full_analysis_a135a9a01e73.md
prompts/: scout-mode.md
references/: discovery-rules.md  output-template.md  sample-prompts.md  watchlist-rules.md
schemas/: README.md  analysis-output.json  event-object.json  watchlist-item.json
scripts/: README.md  approve_trade_idea.py  close_trade_idea.py  example_run.py  export_dashboard_data.py  ingest_artifacts.py  ingest_watchlist.py  init_database.py  intake_to_canonical.py  invalidate_trade_idea.py  list_active_ideas.py  list_tracked_ideas.py  (+8 more)
(+153 files in other folders)
